[package]
name = "github-action-builder"
version = "0.1.0"
edition = "2024"
description = "安卓 APK：监控 GitHub Actions 状态并过滤日志（纯 Rust）"
license = "AGPL-3.0-or-later"

[lib]
name = "github_action_builder"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "desktop_test"
path = "src/main.rs"

[dependencies]
android-activity = "0.4"
android_logger = "0.13"
log = "0.4"

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
octocrab = "0.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

egui = "0.24"
eframe = { version = "0.24", default-features = false, features = ["egui_glow"] }

[package.metadata.android]
package = "com.sheep.github_action_builder"
label = "Actions监控"
min_sdk_version = 21
target_sdk_version = 31
manifest = "android/AndroidManifest.xml"

[[package.metadata.android.permissions]]
name = "android.permission.INTERNET"