[package]
name = "github-action-builder"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
octocrab = "0.32"
android_logger = "0.13"
log = "0.4"
eframe = { version = "0.33", default-features = false, features = ["glow"] }
egui = "0.33"
android-activity = { version = "0.6.0", features = ["native-activity"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.example.githubactionbuilder"
apk_name = "github_action_builder"
manifest = "android/AndroidManifest.xml"
target_sdk_version = 33
min_sdk_version = 21